apps/tamagotchi/k8s.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tamagotchi
  namespace: monitoring
  labels:
    app.kubernetes.io/name: tamagotchi
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tamagotchi
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
